# VeloWorld

./: .gitignore  Makefile  Planner.txt  README.md  localhost-key.pem  localhost.pem  test_api.sh
.github/workflows/: benchmark-gate.yml
backend/: go.mod  go.sum  main_test.go
backend/cmd/api/: main.go
backend/db/migrations/: 001_initial_schema.sql  002_add_user_profile.sql  002_social_features.sql  003_add_rider_metrics.sql
backend/internal/auth/: handler.go  handler_test.go
backend/internal/middleware/: auth.go
backend/internal/queue/: redis.go
backend/internal/rides/: handler.go  handler_test.go  perf_budget_test.go
backend/internal/routes/: handler.go  handler_test.go  perf_budget_test.go
backend/internal/social/: handler.go
backend/internal/storage/: s3.go
client/: CMakeLists.txt  index.html
client/Source/: main.cpp
client/Source/VeloVerse/Physics/: ForceModel.cpp  ForceModel.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsTests.cpp  RouteProfile.cpp  RouteProfile.h  SimulatedTrainer.cpp  SimulatedTrainer.h  TrainerInterface.h
client/Source/VeloVerse/Sensors/: BLEHRMDriver.cpp  BLEHRMDriver.h  HRMInterface.h
client/Source/VeloVerse/Trainer/: ANTPlusFECDriver.cpp  ANTPlusFECDriver.h  BLEFTMSDriver.cpp  BLEFTMSDriver.h  CalibratedTrainer.cpp  CalibratedTrainer.h  TrainerCalibration.cpp  TrainerCalibration.h  TrainerManager.cpp  TrainerManager.h
client/Source/VeloWorld/Physics/: ForceModel.cpp  ForceModel.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsTests.cpp  RouteProfile.cpp  RouteProfile.h  SimulatedTrainer.cpp  SimulatedTrainer.h  TrainerInterface.h
client/Source/VeloWorld/Sensors/: BLEHRMDriver.cpp  BLEHRMDriver.h  HRMInterface.h
client/Source/VeloWorld/Trainer/: ANTPlusFECDriver.cpp  ANTPlusFECDriver.h  BLEFTMSDriver.cpp  BLEFTMSDriver.h  CalibratedTrainer.cpp  CalibratedTrainer.h  TrainerCalibration.cpp  TrainerCalibration.h  TrainerManager.cpp  TrainerManager.h
docs/: checkout_2026-03-30.md  checkout_2026-04-08.md  devnotes_2026-03-31.md  setup.md  veloverse_architecture.md  veloverse_concept .md  veloverse_data_pipeline.md  veloverse_desktop_deliverable.md  veloverse_mvp.md  veloverse_physics_model _specifications.md  veloverse_technical_deep_dive.md  veloworld_architecture.md  veloworld_concept .md  veloworld_data_pipeline.md  veloworld_mvp.md  veloworld_physics_model _specifications.md  veloworld_technical_deep_dive.md
frontend/: README_https.md  about.html  contact.html  demo.html  index.html  map-tracer.html  profile.html  register.html  route-3d-old.html  route-3d.html  serve_https.py  social-user.html  upload.html
infra/: Dockerfile.backend  Dockerfile.pipeline  docker-compose.yml
pipeline/: requirements.txt  veloverse_pipeline.py  veloworld_pipeline.py
pipeline/stages/: ingestion.py  map_matching.py  road_mesh.py  terrain.py
pipeline/tests/: test_ingestion.py  test_map_matching.py  test_performance_budgets.py  test_road_mesh.py  test_terrain.py
pipeline/workers/: route_worker.py  runner.py
prompts/: firstPrompt.md  nextPrompt.md
scripts/: dev.sh  generate_lan_certs.sh  manage.sh  prepare_env.sh  reboot.sh
